[gd_scene load_steps=20 format=3 uid="uid://bsvjn4whb84da"]

[ext_resource type="Script" path="res://game/player/character_scene.gd" id="1_xdwo1"]
[ext_resource type="Script" path="res://game/player/components.gd" id="2_1nx8q"]
[ext_resource type="Script" path="res://game/player/machine.gd" id="3_nqxce"]
[ext_resource type="Script" path="res://game/player/movement_machine.gd" id="4_f1pfw"]
[ext_resource type="Script" path="res://game/player/movement/initial.gd" id="5_mkmwy"]
[ext_resource type="Script" path="res://game/player/direction_machine.gd" id="5_mkte1"]
[ext_resource type="Script" path="res://game/player/movement/coyote.gd" id="6_i33xn"]
[ext_resource type="Script" path="res://game/player/stats.gd" id="6_s6b73"]
[ext_resource type="Script" path="res://game/player/visual.gd" id="7_o0awb"]
[ext_resource type="Script" path="res://game/player/movement/ascending.gd" id="7_uvtrc"]
[ext_resource type="Script" path="res://game/player/movement/descending.gd" id="8_q3q7u"]
[ext_resource type="Script" path="res://game/player/movement/grounded.gd" id="9_ra7os"]
[ext_resource type="Script" path="res://game/player/movement/swinging.gd" id="10_bon4g"]
[ext_resource type="Script" path="res://game/player/direction/right.gd" id="11_6lpas"]
[ext_resource type="Script" path="res://game/player/direction/left.gd" id="12_yyfc6"]
[ext_resource type="Script" path="res://game/player/input.gd" id="14_rlfv4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31srm"]
size = Vector2(64, 64)

[sub_resource type="Gradient" id="Gradient_o7cqu"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lu0hc"]
gradient = SubResource("Gradient_o7cqu")

[node name="Character" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 124
script = ExtResource("1_xdwo1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_31srm")

[node name="PlayerComponents" type="Node2D" parent="."]
script = ExtResource("2_1nx8q")

[node name="PlayerMachines" type="Node2D" parent="PlayerComponents"]
script = ExtResource("3_nqxce")

[node name="MovementMachine" type="Node2D" parent="PlayerComponents/PlayerMachines"]
script = ExtResource("4_f1pfw")

[node name="Initial" type="Node2D" parent="PlayerComponents/PlayerMachines/MovementMachine"]
script = ExtResource("5_mkmwy")

[node name="Coyote" type="Node2D" parent="PlayerComponents/PlayerMachines/MovementMachine"]
script = ExtResource("6_i33xn")

[node name="Ascending" type="Node2D" parent="PlayerComponents/PlayerMachines/MovementMachine"]
script = ExtResource("7_uvtrc")

[node name="Descending" type="Node2D" parent="PlayerComponents/PlayerMachines/MovementMachine"]
script = ExtResource("8_q3q7u")

[node name="Grounded" type="Node2D" parent="PlayerComponents/PlayerMachines/MovementMachine"]
script = ExtResource("9_ra7os")

[node name="Swinging" type="Node2D" parent="PlayerComponents/PlayerMachines/MovementMachine"]
script = ExtResource("10_bon4g")

[node name="DirectionMachine" type="Node2D" parent="PlayerComponents/PlayerMachines"]
script = ExtResource("5_mkte1")

[node name="Right" type="Node2D" parent="PlayerComponents/PlayerMachines/DirectionMachine"]
script = ExtResource("11_6lpas")

[node name="Left" type="Node2D" parent="PlayerComponents/PlayerMachines/DirectionMachine"]
script = ExtResource("12_yyfc6")

[node name="PlayerStats" type="Node2D" parent="PlayerComponents"]
script = ExtResource("6_s6b73")

[node name="PlayerInput" type="Node2D" parent="PlayerComponents"]
script = ExtResource("14_rlfv4")

[node name="PlayerVisual" type="Node2D" parent="."]
script = ExtResource("7_o0awb")

[node name="Sprite2D" type="Sprite2D" parent="PlayerVisual"]
texture = SubResource("GradientTexture2D_lu0hc")
